--- a/textproc/dashing/Portfile
+++ b/textproc/dashing/Portfile
@@ -2,6 +2,7 @@
 
 PortSystem          1.0
 PortGroup           github 1.0
+PortGroup           golang 1.0
 
 github.setup        technosophos dashing 0e0519d76ed6bbbe02b00ee1d1ac24697d349f49
 version             20180216
@@ -19,27 +20,23 @@ depends_build       port:go \
                     port:glide
 use_configure       no
 
-checksums           rmd160  3e1be590c5e74509e47951f460e783fbee111a30 \
-                    sha256  f8786555cbe942d37c9b242813b40a2d8531290b0b3212ed8656a3e25743c4cc \
-                    size    57610
+checksums           dashing-${version}.tar.gz \
+                        rmd160  3e1be590c5e74509e47951f460e783fbee111a30 \
+                        sha256  f8786555cbe942d37c9b242813b40a2d8531290b0b3212ed8656a3e25743c4cc \
+                        size    57610
 
-worksrcdir          ${workpath}/src/github.com/${github.author}/${github.project}
+go.vendors-append   github.com/andybalholm/cascadia 3ad29d1ad1c4f2023e355603324348cf1f4b2d48 \
+                    github.com/codegangsta/cli c31a7975863e7810c92e2e288a9ab074f9a88f29 \
+                    github.com/mattn/go-sqlite3 5510da399572b4962c020184bb291120c0a412e2 \
+                    golang.org/x/crypto f18420efc3b4f8e9f3d51f6bd2476e92c46260e9 \
+                    golang.org/x/net 0cb26f788dd4625d1956c6fd97ffc4c90669d129 \
+                    golang.org/x/text cf4986612c83df6c55578ba198316d1684a9a287 \
+                    gopkg.in/yaml.v2 f7716cbe52baa25d2e9b0d0da546fcf909fc16b4
 
 post-extract {
-    xinstall -d [file dirname ${worksrcdir}]
-    move [glob ${workpath}/${name}-*] ${worksrcpath}
     reinplace "s|VERSION :=|VERSION ?=|" ${worksrcpath}/Makefile
 }
 
+build.cmd           make
 build.target        build
 build.args          VERSION=${version}
-build.env           GOPATH=${workpath} \
-                    CC=${configure.cc}
-
-pre-build {
-    system -W ${worksrcpath} "GOPATH=${workpath} glide --no-color install"
-}
-
-destroot {
-    xinstall -m 755 ${worksrcpath}/${name} ${destroot}${prefix}/bin
-}
