--- a/net/toxiproxy/Portfile
+++ b/net/toxiproxy/Portfile
@@ -1,10 +1,9 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           github 1.0
 PortGroup           golang 1.0
 
-github.setup        Shopify toxiproxy 2.1.3 v
+go.setup            Shopify toxiproxy 2.1.3 v
 categories          net
 maintainers         {amake @amake} openmaintainer
 license             MIT
