--- a/sysutils/go2port/Portfile
+++ b/sysutils/go2port/Portfile
@@ -1,10 +1,9 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem          1.0
-PortGroup           github 1.0
 PortGroup           golang 1.0
 
-github.setup        amake go2port b63a25eb60817c3fa793b7304d6a1d7a9c9b0e2b
+go.setup            amake go2port cb963704f0690cb44d67da6184206bcbabb20f1f
 version             20180907
 categories          sysutils macports
 platforms           darwin
@@ -16,11 +15,11 @@ description         A go tool for creating MacPorts portfiles
 long_description    ${description}
 
 checksums           go2port-${github.version}.tar.gz \
-                        rmd160  69a87edb78290c8067e650c92d87e26c3b472eed \
-                        sha256  08d434bcee5b6babcd98538319239333b3590bd4cce1ad943f7182e79ed31326 \
-                        size    2715
+                        rmd160  aa452109a75f469119892857fd930f5c6089bc82 \
+                        sha256  ec62675d655055b7ead12f4492f6a0af8226b865da3b167b4177c7998ddb39ea \
+                        size    3559
 
-go.vendors-append   github.com/urfave/cli cfb38830724cc34fedffe9a2a29fb54fa9169cd1 \
+go.vendors          github.com/urfave/cli cfb38830724cc34fedffe9a2a29fb54fa9169cd1 \
                     golang.org/x/crypto 0709b304e793a5edb4a2c0145f281ecdc20838a4 \
                     gopkg.in/yaml.v2 5420a8b6744d3b0345ab293f6fcba19c978f1183
 
@@ -36,3 +35,7 @@ checksums-append    urfave-cli-${cli.version}.tar.gz \
                         rmd160 56eb283b31feac8db4ede3e24768e0f9999913d2 \
                         sha256 34dc73c7798abfa3bb96c46c25002ccc5b92543dc3e008a31e0ae94c2528e52b \
                         size 70231
+
+destroot {
+    xinstall -m 755 ${worksrcpath}/${name} ${destroot}${prefix}/bin
+}
