--- a/sysutils/peco/Portfile
+++ b/sysutils/peco/Portfile
@@ -1,10 +1,9 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 
 PortSystem      1.0
-PortGroup       github 1.0
 PortGroup       golang 1.0
 
-github.setup    peco peco 0.5.3 v
+go.setup    peco peco 0.5.3 v
 revision        0
 categories      sysutils
 homepage        https://peco.github.io
@@ -27,14 +26,14 @@ checksums       peco-${version}.tar.gz \
 # https://github.com/peco/peco/blob/master/glide.lock
 # $ curl https://raw.githubusercontent.com/peco/peco/v${version}/glide.lock |
 #   ruby2.5 -r yaml -e 'YAML.load(ARGF)["imports"].each{|d| puts d["name"]+" "+d["version"]}'
-go.vendors-append   github.com/davecgh/go-spew    346938d642f2ec3594ed81d874461961cd0faa76 \
-                    github.com/google/btree       0c3044bc8bada22db67b93f5760fe3f05d6a5c25 \
-                    github.com/jessevdk/go-flags  8bc97d602c3bfeb5fc6fc9b5a9c898f245495637 \
-                    github.com/lestrrat/go-pdebug 2e6eaaa5717f81bda41d27070d3c966f40a1e75f \
-                    github.com/mattn/go-runewidth 737072b4e32b7a5018b4a7125da8d12de90e8045 \
-                    github.com/nsf/termbox-go     e2050e41c8847748ec5288741c0b19a8cb26d084 \
-                    github.com/pkg/errors         248dadf4e9068a0b3e79f02ed0a610d935de5302 \
-                    github.com/stretchr/testify   18a02ba4a312f95da08ff4cfc0055750ce50ae9e
+go.vendors   github.com/davecgh/go-spew    346938d642f2ec3594ed81d874461961cd0faa76 \
+             github.com/google/btree       0c3044bc8bada22db67b93f5760fe3f05d6a5c25 \
+             github.com/jessevdk/go-flags  8bc97d602c3bfeb5fc6fc9b5a9c898f245495637 \
+             github.com/lestrrat/go-pdebug 2e6eaaa5717f81bda41d27070d3c966f40a1e75f \
+             github.com/mattn/go-runewidth 737072b4e32b7a5018b4a7125da8d12de90e8045 \
+             github.com/nsf/termbox-go     e2050e41c8847748ec5288741c0b19a8cb26d084 \
+             github.com/pkg/errors         248dadf4e9068a0b3e79f02ed0a610d935de5302 \
+             github.com/stretchr/testify   18a02ba4a312f95da08ff4cfc0055750ce50ae9e
 
 checksums-append    davecgh-go-spew-${go-spew.version}.tar.gz \
                         md5 40113f77febc1bdf8207c2c8c9f67293 \
@@ -69,4 +68,8 @@ checksums-append    davecgh-go-spew-${go-spew.version}.tar.gz \
                         sha1 144550c2cffa1936c9ecd669aca103c9072f3710 \
                         sha256 1a362b9430d82e3e28b4525bdfa45515e26642b046f8c81f6c114b346d415d55
 
-build.args      cmd/peco/peco.go
+build.target      cmd/peco/peco.go
+
+destroot {
+    xinstall -m 755 ${worksrcpath}/${name} ${destroot}${prefix}/bin
+}
