--- a/java/openjdk10/Portfile
+++ b/java/openjdk10/Portfile
@@ -18,7 +18,7 @@ long_description Production-ready, free and open-source build of the Java \
                  Edition (SE) 10 Platform. OpenJDK is the official reference \
                  implementation of Java SE. Included components are the \
                  HotSpot virtual machine, the Java class library and the Java \
-                 compiler. 
+                 compiler.
 
 homepage         http://jdk.java.net/10/
 master_sites     https://download.java.net/java/GA/jdk10/${version}/19aef61b38124481863b1413dce1855f/13/
@@ -45,4 +45,4 @@ destroot {
 
 livecheck.type      regex
 livecheck.url       ${homepage}
-livecheck.regex     "Java Development Kit, version (\\d+(?:\\.\\d+)*(?:-\\d+)?)"
+livecheck.regex     "openjdk-(\\d+(?:\\.\\d+)*(?:-\\d+)?)_osx-x64_bin"
